@@ -1,12 +1,12 @@
 #
 # All local filesystems are mounted (done during boot phase)
 #
-$local_fs	boot.localfs
+$local_fs	boot.localfs +boot.crypto
 
 #
 # Low level networking (ethernet card)
 #
-$network	network +pcmcia +hotplug
+$network	network
 
 #
 # Named is operational
@@ -18,7 +18,7 @@ $named		+named +dnsmasq +lwresd $network
 # be remote. Most applications that care will probably require
 # both $local_fs and $remote_fs)
 #
-$remote_fs	$local_fs +nfs
+$remote_fs	$local_fs +nfs +smbfs
 
 #
 # System logger is operational
@@ -38,4 +38,4 @@ $time		boot.clock +xntpd
 #
 # Services which need to be interactive
 #
-<interactive>   boot.crypto boot.localfs boot.rootfsck apache apache2 kdump
+<interactive>   apache apache2 boot.clock boot.crypto boot.crypto-early boot.localfs boot.rootfsck kbd kdump ntp
